# jamesos

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  migrate.py  nixpacks.toml  pyproject.toml
migrations/: 001_initial_schema.sql  002_connections.sql  003_video_jobs.sql  004_media_assets.sql  005_media_analysis.sql  006_video_productions.sql  007_autopilot_runs.sql  008_autopilot_research.sql  009_autopilot_stage.sql  010_video_modes_and_clip_mute.sql  011_video_mode_timeline.sql  012_media_role_post_image.sql  013_video_mode_story_audio.sql  014_video_mode_avatar_story_mix.sql  015_caption_style.sql  016_image_style.sql  017_media_role_hero.sql  018_video_mode_engaging_avatar.sql  019_long_form_cutter.sql  020_long_sources_drive_file_id.sql  021_agent_runs.sql  022_video_productions_review.sql  023_auth_users_sessions.sql  024_voice_ingest_jobs.sql  025_style_templates.sql  026_video_productions_template.sql  027_video_productions_video_engine.sql  028_feedback_changes.sql  029_video_productions_mode_split.sql  030_video_productions_mode_split_vertical.sql  031_media_assets_source_type_generated.sql  032_media_assets_audio_roles.sql  033_media_assets_brand_logo_role.sql  034_rls_enforcement.sql  035_auth_login_lookup.sql  036_broll_pacing.sql  037_social_saved_posts.sql  038_feedback_proposed.sql
scripts/: agent_mark_proposed.py  agent_next_feedback.py  seed_watchlist_from_xlsx.py
source-docs/: HANDOFF_INVENTORY_2026-05-09.md  INGESTION_SECTION_9_PREFILL_2026-05-04.md  JAMES_FRUSTRATION_DRIFT_LEDGER_2026-05-04.md  JAMES_THE_FULL_VISION.md  (+5 more)
(+156 files in other folders)
