[project]
name = "james-os"
version = "0.1.0"
description = "JAMES OS — memory substrate API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "asyncpg>=0.30",
  "pgvector>=0.3.6",
  "httpx>=0.27",
  "anthropic>=0.39",
  "openai>=1.50",
  "google-auth>=2.34",
  "google-api-python-client>=2.140",
  "voyageai>=0.3",
  "cohere>=5.11",
  "python-dotenv>=1.0",
  "structlog>=24.4",
  "tenacity>=9.0",
  "python-multipart>=0.0.12",
  "pypdf>=5.1",
  "python-docx>=1.1",
  "bcrypt>=4.2.0",
  "PyJWT>=2.10.0",
  "cryptography>=43",
  "xpoz>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/james_os"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]
